@@ -21,14 +21,17 @@
         <relativePath/>
     </parent>
     <properties>
-        <nimbus-jose-jwt.version>8.23</nimbus-jose-jwt.version>
-        <timestamp>${maven.build.timestamp}</timestamp>
+        <java.version>17</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <timestamp>${maven.build.timestamp}</timestamp>
         <cxf.version>3.5.1</cxf.version>
         <springfox.version>3.0.0</springfox.version>
-        <token-validation-version>1.3.10</token-validation-version>
+        <nimbus-jose-jwt.version>8.23</nimbus-jose-jwt.version>
+        <token-validation-version>2.0.10</token-validation-version>
     </properties>
 
     <scm>
@@ -63,11 +66,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                     <parameters>true</parameters>
-                    <release>15</release>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <release>${java.version}</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -104,7 +106,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--enable-preview -Xms1024m -Xmx2048m</argLine>
+                    <argLine>-Xms1024m -Xmx2048m</argLine>
                     <reuseForks>true</reuseForks>
                     <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
@@ -255,12 +257,6 @@
             <groupId>no.nav.security</groupId>
             <artifactId>token-validation-spring</artifactId>
             <version>${token-validation-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>no.nav.security</groupId>
-            <artifactId>token-validation-test-support</artifactId>
-            <version>${token-validation-version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.retry</groupId>
